@@ -1,6 +1,7 @@
 
 Version Next
 
+    - Added IndentXMLEventWriter and StackXMLEventReader
     - Fix character encoding bug in pobj package (always use UTF-8)
     - Fixed bug in StringEncoder.enquote(byte[]) when non-zero offset
     - Update vaadin7 package for 7.0.0.beta11
